contrast fixed

--- a/css/main.css
+++ b/css/main.css
@@ -176,7 +176,7 @@ body {
         font-size: 3.2rem; } }
 
 .paragraph {
-  color: #9194a1;
+  color: #6a6d7c;
   line-height: 2.8rem;
   font-size: 1.5rem; }
   .paragraph-primary {
