--- a/scss/_typography.scss
+++ b/scss/_typography.scss
@@ -37,7 +37,7 @@
 // * PARAGRAPHS *
 // --------------
 .paragraph {
-    color: hsl(229, 8%, 60%);
+    color: hsl(229, 8%, 45%);
     line-height: 2.8rem;
     font-size: 1.5rem;
 
